@@ -1,5 +1,11 @@
 GFAL2 RELEASE-NOTES:
 
+* Fri Feb 27 2015 Alejandro Alvarez <aalvarez at cern.ch> - 2.8.4
+- [DMC-638] - GridFTP Plugin: Performance marker timeout causes abort
+
+* Tue Feb 10 2015 Alejandro Alvarez <aalvarez at cern.ch> - 2.8.3
+- [DMC-632] - GridFTP Plugin: When the timeout expires, wait for the callback after cancellation
+
 * Thu Jan 29 2014 Alejandro Alvarez <aalvarez at cern.ch> - 2.8.2
 - [DMC-622] - Core: gfal2 crash when aborting staging operation
 
